fixed vertical-align

--- a/tst.css
+++ b/tst.css
@@ -734,7 +734,7 @@ ul:first-child {
     font-size: 1rem;
     letter-spacing: normal;
     line-height: normal;
-    vertical-align: center;
+    vertical-align: middle;
     padding: 0.5em 1em;
     margin-bottom: 11px;
     max-width: 200px;
